# darkwrite

./: .eslintrc.json  .gitignore  3rd-party-licenses.txt  LICENSE  Makefile  README.md  colors_dark.json  colors_light.json  components.json  electron-builder.json5  electron.vite.config.ts  index.css  index.html  index.js  main.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  tscheck.yml
docs/: BUILDING.md  BUILDING_WIN.md  DEVELOPMENT.md  SCRIPTS.md
electron/: electron-env.d.ts  main.ts
src/: 3rd-party-cargo.json  3rd-party-licenses.txt  API.ts  App.tsx  GlobalSettings.tsx  ImportFromLegacy.ts  NotebooksContext.tsx  Settings.ts  SettingsContext.ts  Theme.ts  Util.tsx  global.d.ts  globals.css  i18n.ts  index.css  index.tsx  layout.test.tsx  layout.tsx  main.css  useComponentVisible.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  dir.rs  font.rs  main.rs
src/UI/: ActiveNotebookContext.ts  ListSwitcher.tsx  MainToolbar.tsx  Menu.tsx  NoteEditDialog.tsx  NoteEditor.tsx  NotesPanel.tsx  NotesPanelMethods.tsx  Settings.tsx  Sidebar.tsx  TaskItem.tsx  Tasks.tsx
src/backend/: Filesystem.ts  Note.ts  Notebook.ts  Search.test.ts  Search.ts  TestUtils.ts
src/common/: note.test.ts  note.ts  vitest.config.ts
src/context/: ISettingsContext.ts  SettingsContext.ts
src/data/: NotebooksContext.tsx
src/lib/: API.ts  (+2 more)
(+150 files in other folders)
