[package]
name = "darkwrite"
version = "1.0.0-alpha.3"
description = "Darkwrite Backend Code"
authors = ["astudentinearth"]
license = "GPL-3.0-or-later"
repository = ""
default-run = "darkwrite"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog", "dialog-open", "fs-all", "os-all", "path-all", "protocol-asset"] }
open = "3.0.3"
base64 = "0.21.0"
font-loader = "0.11.0"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
